--- a/tests/__snapshots__/init-container-command.dev.yaml
+++ b/tests/__snapshots__/init-container-command.dev.yaml
@@ -1,24 +1,25 @@
 // Jest Snapshot v1, https://goo.gl/fbAQLP
 
-exports[`volume-add.preprod 1`] = `
+exports[`init-container-command.dev 1`] = `
 "apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
     field.cattle.io/projectId: \\"1234\\"
+    janitor/ttl: 7d
     kubeWorkflow/gitBranch: feature-branch-1
     kubeWorkflow/mainNamespace: \\"true\\"
   labels:
-    application: test-volume-add
+    application: test-init-container-command
     cert: wildcard
-  name: test-volume-add-preprod
+  name: test-init-container-command-feature-branch-1
 ---
 apiVersion: v1
 automountServiceAccountToken: false
 kind: ServiceAccount
 metadata:
   name: default
-  namespace: test-volume-add-preprod
+  namespace: test-init-container-command-feature-branch-1
 ---
 apiVersion: v1
 kind: Service
@@ -27,10 +28,10 @@ metadata:
     kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
     kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
   labels:
-    application: test-volume-add
+    application: test-init-container-command
     component: app
   name: app
-  namespace: test-volume-add-preprod
+  namespace: test-init-container-command-feature-branch-1
 spec:
   ports:
   - name: http
@@ -44,18 +45,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kapp.k14s.io/change-group: autodevops/test-volume-add-preprod
-    kapp.k14s.io/change-group.app: autodevops/app.test-volume-add-preprod
+    kapp.k14s.io/change-group: autodevops/test-init-container-command-feature-branch-1
+    kapp.k14s.io/change-group.app: autodevops/app.test-init-container-command-feature-branch-1
     kapp.k14s.io/create-strategy: fallback-on-update
     kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
     kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
     kapp.k14s.io/nonce: \\"\\"
     kapp.k14s.io/update-strategy: fallback-on-replace
   labels:
-    application: test-volume-add
+    application: test-init-container-command
     component: app
   name: app
-  namespace: test-volume-add-preprod
+  namespace: test-init-container-command-feature-branch-1
 spec:
   replicas: 1
   selector:
@@ -64,13 +65,13 @@ spec:
   template:
     metadata:
       labels:
-        application: test-volume-add
+        application: test-init-container-command
         component: app
     spec:
       containers:
       - env: null
         envFrom: null
-        image: ghcr.io/socialgouv/test-volume-add/app:preprod-ffac537e6cbbf934b08745a378932722df287a53
+        image: ghcr.io/socialgouv/test-init-container-command/app:sha-ffac537e6cbbf934b08745a378932722df287a53
         livenessProbe:
           failureThreshold: 15
           httpGet:
@@ -105,14 +106,24 @@ spec:
             path: /index.html
             port: http
           periodSeconds: 5
-        volumeMounts:
-        - mountPath: /mnt/docs
-          name: docs
-      initContainers: null
-      volumes:
-      - name: docs
-        persistentVolumeClaim:
-          claimName: docs
+        volumeMounts: null
+      initContainers:
+      - args: []
+        command:
+        - yarn
+        - db:init
+        env: null
+        envFrom: null
+        image: ghcr.io/socialgouv/test-init-container-command/app:sha-ffac537e6cbbf934b08745a378932722df287a53
+        name: init-container-command
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
+          requests:
+            cpu: 50m
+            memory: 128Mi
+      volumes: null
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -120,13 +131,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
   labels:
-    application: test-volume-add
+    application: test-init-container-command
     component: app
   name: app
-  namespace: test-volume-add-preprod
+  namespace: test-init-container-command-feature-branch-1
 spec:
   rules:
-  - host: test-volume-add-preprod.dev.fabrique.social.gouv.fr
+  - host: test-init-container-command-feature-branch-1.dev.fabrique.social.gouv.fr
     http:
       paths:
       - backend:
@@ -138,14 +149,14 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - test-volume-add-preprod.dev.fabrique.social.gouv.fr
+    - test-init-container-command-feature-branch-1.dev.fabrique.social.gouv.fr
     secretName: wildcard-crt
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: netpol-ingress
-  namespace: test-volume-add-preprod
+  namespace: test-init-container-command-feature-branch-1
 spec:
   ingress:
   - from:
