--- a/tests/__snapshots__/volume-add.prod.yaml
+++ b/tests/__snapshots__/volume-add.prod.yaml
@@ -19,6 +19,129 @@ metadata:
   name: default
   namespace: test-volume-add
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
+    kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
+  labels:
+    application: test-volume-add
+    component: app
+  name: app
+  namespace: test-volume-add
+spec:
+  ports:
+  - name: http
+    port: 80
+    targetPort: 3000
+  selector:
+    component: app
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  annotations:
+    kapp.k14s.io/change-group: autodevops/test-volume-add
+    kapp.k14s.io/change-group.app: autodevops/app.test-volume-add
+    kapp.k14s.io/create-strategy: fallback-on-update
+    kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
+    kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
+    kapp.k14s.io/nonce: \\"\\"
+    kapp.k14s.io/update-strategy: fallback-on-replace
+  labels:
+    application: test-volume-add
+    component: app
+  name: app
+  namespace: test-volume-add
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      component: app
+  template:
+    metadata:
+      labels:
+        application: test-volume-add
+        component: app
+    spec:
+      containers:
+      - env: null
+        envFrom: null
+        image: ghcr.io/socialgouv/test-volume-add/app:sha-ffac537e6cbbf934b08745a378932722df287a53
+        livenessProbe:
+          failureThreshold: 15
+          httpGet:
+            path: /index.html
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          timeoutSeconds: 5
+        name: app
+        ports:
+        - containerPort: 3000
+          name: http
+        readinessProbe:
+          failureThreshold: 15
+          httpGet:
+            path: /index.html
+            port: http
+          initialDelaySeconds: 0
+          periodSeconds: 5
+          successThreshold: 1
+          timeoutSeconds: 1
+        resources:
+          limits:
+            cpu: 200m
+            memory: 256Mi
+          requests:
+            cpu: 50m
+            memory: 128Mi
+        startupProbe:
+          failureThreshold: 12
+          httpGet:
+            path: /index.html
+            port: http
+          periodSeconds: 5
+        volumeMounts:
+        - mountPath: /mnt/docs
+          name: docs
+      initContainers: null
+      volumes:
+      - name: docs
+        persistentVolumeClaim:
+          claimName: docs
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: \\"true\\"
+  labels:
+    application: test-volume-add
+    component: app
+  name: app
+  namespace: test-volume-add
+spec:
+  rules:
+  - host: test-volume-add.fabrique.social.gouv.fr
+    http:
+      paths:
+      - backend:
+          service:
+            name: app
+            port:
+              name: http
+        path: /
+        pathType: Prefix
+  tls:
+  - hosts:
+    - test-volume-add.fabrique.social.gouv.fr
+    secretName: test-volume-add-crt
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
