--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -55,3 +55,29 @@ jobs:
         run: kubectl get pods -n test-namespace --field-selector=status.phase=Running | grep "app"
       - name: ingress
         run: kubectl get ingress -n test-namespace --field-selector metadata.name=app -o=jsonpath='{.items[0].spec.rules[0].host}' | grep "test.demo.net"
+  test-values-js-tag:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: v1.18.3
+      - name: Kubernetes KinD Cluster
+        uses: helm/kind-action@v1.2.0
+      - run: kubectl cluster-info
+      - run: kubectl version
+      - run: kubectl get pods -n kube-system
+      - run: kubectl create ns test-project-ci
+      - name: test values-js
+        uses: "./"
+        with:
+          environment: prod
+          token: ${{ secrets.GITHUB_TOKEN }}
+          rancherProjectId: "cluster:project"
+          rancherProjectName: "test-project"
+          cwd: .github/e2e/values-js
+          kubeconfigContext: kind-chart-testing
+      - run: kubectl get pods -n test-namespace
+      - name: pod is running
+        run: kubectl get pods -n test-namespace --field-selector=status.phase=Running | grep "app"
+      - name: ingress
+        run: kubectl get ingress -n test-namespace --field-selector metadata.name=app -o=jsonpath='{.items[0].spec.rules[0].host}' | grep "test.demo.net"
