--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -55,7 +55,7 @@ jobs:
         run: kubectl get pods -n test-namespace --field-selector=status.phase=Running | grep "app"
       - name: ingress
         run: kubectl get ingress -n test-namespace --field-selector metadata.name=app -o=jsonpath='{.items[0].spec.rules[0].host}' | grep "test.demo.net"
-  test-values-js-tag:
+  test-standalone-charts-tag:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -67,17 +67,14 @@ jobs:
       - run: kubectl version
       - run: kubectl get pods -n kube-system
       - run: kubectl create ns test-project-ci
-      - name: test values-js
+      - name: test standalone-charts
         uses: "./"
         with:
           environment: prod
           token: ${{ secrets.GITHUB_TOKEN }}
           rancherProjectId: "cluster:project"
           rancherProjectName: "test-project"
-          cwd: .github/e2e/values-js
+          cwd: .github/e2e/standalone-charts
           kubeconfigContext: kind-chart-testing
-      - run: kubectl get pods -n test-namespace
-      - name: pod is running
-        run: kubectl get pods -n test-namespace --field-selector=status.phase=Running | grep "app"
-      - name: ingress
-        run: kubectl get ingress -n test-namespace --field-selector metadata.name=app -o=jsonpath='{.items[0].spec.rules[0].host}' | grep "test.demo.net"
+      - run: kubectl get jobs -n test-project-ci
+      - run: kubectl get jobs -n test-project-ci --field-selector status.successful=1 | grep "job-extra" # additionnal grep to exit 1 on error
