--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -72,8 +72,9 @@ jobs:
           cwd: .github/e2e/app-simple
           kubeconfigContext: kind-chart-testing
           inlineValues: |
-            image: alpine
-            command: ["sleep", "30"]
+            app:
+              image: alpine
+              command: ["sleep", "30"]
       - run: kubectl get pods -n test-project-ci
       - run: kubectl get pods -n test-project-ci  --field-selector=status.phase=Running | grep "app"
   app-tag:
@@ -95,8 +96,9 @@ jobs:
           cwd: .github/e2e/app-simple
           kubeconfigContext: kind-chart-testing
           inlineValues: |
-            image: alpine
-            command: ["sleep", "30"]
+            app:
+              image: alpine
+              command: ["sleep", "30"]
         env:
           KW_GIT_REF: v1.18.3
       - run: kubectl get pods -n test-project-ci
