--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -75,8 +75,8 @@ jobs:
             app:
               image: nginx
               containerPort: 80
-      - run: kubectl get pods -n test-project-ci
-      - run: kubectl get pods -n test-project-ci  --field-selector=status.phase=Running | grep "app"
+      - run: kubectl get pods -n kube-workflow
+      - run: kubectl get pods -n kube-workflow  --field-selector=status.phase=Running | grep "app"
   app-tag:
     runs-on: ubuntu-latest
     steps:
@@ -100,6 +100,6 @@ jobs:
               containerPort: 80
               command: ["sleep", "30"]
         env:
-          KW_GIT_REF: v1.18.3
-      - run: kubectl get pods -n test-project-ci
-      - run: kubectl get pods -n test-project-ci  --field-selector=status.phase=Running | grep "app"
+          KW_GIT_REF: v1.21.6
+      - run: kubectl get pods -n kube-workflow
+      - run: kubectl get pods -n kube-workflow  --field-selector=status.phase=Running | grep "app"
