--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -96,9 +96,9 @@ jobs:
           inlineValues: |
             app:
               imagePackage: nginx
+              imageProject: ""
               registry: docker.io
               containerPort: 80
-              command: ["sleep", "30"]
         env:
           KW_GIT_REF: v1.21.6
       - run: kubectl get pods -n kube-workflow
