--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -97,6 +97,7 @@ jobs:
             app:
               imagePackage: nginx
               imageProject: ""
+              imageRepository: ""
               registry: docker.io
               containerPort: 80
         env:
