--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -104,4 +104,7 @@ jobs:
         env:
           KW_GIT_REF: v1.21.6
       - run: kubectl get pods -n kube-workflow
-      - run: kubectl get pods -n kube-workflow  --field-selector=status.phase=Running | grep "app"
+      - run: kubectl get pods -n kube-workflow --field-selector=status.phase=Running | grep "app"
+      - name: "use tagged image"
+        run:
+          kubectl --context dev get pods -n sample-next-app-preprod -o jsonpath="{.items[*].spec.containers[*].image}" | grep "docker.io/nginx:1.21.6" 
