--- a/.github/workflows/kind.yaml
+++ b/.github/workflows/kind.yaml
@@ -107,4 +107,4 @@ jobs:
       - run: kubectl get pods -n kube-workflow --field-selector=status.phase=Running | grep "app"
       - name: "use tagged image"
         run:
-          kubectl --context dev get pods -n sample-next-app-preprod -o jsonpath="{.items[*].spec.containers[*].image}" | grep "docker.io/nginx:1.21.6" 
+          kubectl --context dev get pods -n kube-workflow -o jsonpath="{.items[*].spec.containers[*].image}" | grep "docker.io/nginx:1.21.6" 
