--- a/packages/workflow/charts/oauth2-proxy/templates/deployment.yaml
+++ b/packages/workflow/charts/oauth2-proxy/templates/deployment.yaml
@@ -57,6 +57,8 @@ spec:
             periodSeconds: 5
             initialDelaySeconds: 30
           env:
+            - name: "OAUTH2_PROXY_HTTP_ADDRESS"
+              value: "0.0.0.0:4180"
             - name: "OAUTH2_PROXY_REDIRECT_URL"
               value: https://{{ or .Values.host .Values.global.host }}/oauth2/callback
             {{- if gt (len .Values.env) 0 }}
