--- a/packages/workflow/tests/__snapshots__/oauth2-proxy-metabase.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/oauth2-proxy-metabase.prod.yaml
@@ -244,6 +244,8 @@ spec:
             periodSeconds: 5
             initialDelaySeconds: 30
           env:
+            - name: OAUTH2_PROXY_HTTP_ADDRESS
+              value: 0.0.0.0:4180
             - name: OAUTH2_PROXY_REDIRECT_URL
               value: >-
                 https://test-oauth2-proxy-metabase.fabrique.social.gouv.fr/oauth2/callback
