fix(app): use project context in ingress name

--- a/packages/workflow/tests/__snapshots__/app-simple-tag.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/app-simple-tag.dev.yaml
@@ -141,7 +141,7 @@ metadata:
   labels:
     component: app
     application: test-app-simple-tag
-  name: app
+  name: test-app-simple-tag-app
   namespace: test-app-simple-tag-v1-2-3-3sg4dn
 spec:
   rules:
