--- a/packages/workflow/tests/__snapshots__/redirect.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/redirect.prod.yaml
@@ -141,7 +141,7 @@ metadata:
   labels:
     component: app
     application: test-redirect
-  name: app
+  name: test-redirect-app
   namespace: test-redirect
 spec:
   rules:
