--- a/packages/workflow/tests/__snapshots__/values-js.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/values-js.dev.yaml
@@ -139,7 +139,7 @@ metadata:
   labels:
     component: app
     application: the-awesome
-  name: app
+  name: the-awesome-app
   namespace: test-namespace
 spec:
   rules:
