--- a/packages/workflow/charts/app/templates/ingress.yaml
+++ b/packages/workflow/charts/app/templates/ingress.yaml
@@ -14,7 +14,7 @@ metadata:
   labels:
     component: {{ or .Values.component .Chart.Name }}
     application: {{ .Values.global.repositoryName }}
-  name: {{ or .Values.component .Chart.Name }}
+  name: {{ .Values.global.repositoryName }}-{{ or .Values.component .Chart.Name }}
   namespace: {{ or .Values.namespace .Values.global.namespace }}
 spec:
   rules:
