--- a/packages/workflow/tests/__snapshots__/app-simple-tag.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/app-simple-tag.prod.yaml
@@ -141,7 +141,7 @@ metadata:
   labels:
     component: app
     application: test-app-simple-tag
-  name: app
+  name: test-app-simple-tag-app
   namespace: test-app-simple-tag
 spec:
   rules:
