--- a/packages/workflow/tests/__snapshots__/jobs-seed-command.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/jobs-seed-command.dev.yaml
@@ -491,7 +491,7 @@ metadata:
   labels:
     component: app
     application: test-jobs-seed-command
-  name: app
+  name: test-jobs-seed-command-app
   namespace: test-jobs-seed-command-feature-branch-1
 spec:
   rules:
