--- a/packages/workflow/tests/__snapshots__/long-branch-host.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/long-branch-host.dev.yaml
@@ -141,7 +141,7 @@ metadata:
   labels:
     component: app-api
     application: test-long-branch-host
-  name: app-api
+  name: test-long-branch-host-app-api
   namespace: test-long-branch-host-feature-branch-1
 spec:
   rules:
