--- a/packages/workflow/tests/__snapshots__/post-renderer.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/post-renderer.dev.yaml
@@ -141,7 +141,7 @@ metadata:
   labels:
     component: app
     application: test-post-renderer
-  name: app
+  name: test-post-renderer-app
   namespace: test-post-renderer-feature-branch-1
 spec:
   rules:
