--- a/packages/workflow/Chart.yaml
+++ b/packages/workflow/Chart.yaml
@@ -42,4 +42,8 @@ dependencies:
     repository: https://codecentric.github.io/helm-charts
     version: 17.0.3
     condition: keycloak.enabled
+  - name: redis
+    repository: file://./charts/redis
+    version: 17.0.3
+    condition: redis.enabled
 appVersion: 1.22.3
