--- a/packages/workflow/tests/__snapshots__/redirect.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/redirect.prod.yaml
@@ -120,7 +120,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -179,5 +179,24 @@ spec:
     - hosts:
         - test-redirect.fabrique.social.gouv.fr
       secretName: app-redirect
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-redirect
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
