--- a/packages/workflow/tests/__snapshots__/charts.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/charts.dev.yaml
@@ -85,5 +85,24 @@ spec:
               set -e
               echo Hello World
               FOO=\\"barjo\\"\\"
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-charts-feature-branch-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
