--- a/packages/workflow/tests/__snapshots__/jobs-build-stage.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/jobs-build-stage.dev.yaml
@@ -163,7 +163,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -856,5 +856,24 @@ spec:
         - >-
           hasura-test-jobs-build-stage-feature-branch-1.dev.fabrique.social.gouv.fr
       secretName: wildcard-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-jobs-build-stage-feature-branch-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
