--- a/packages/workflow/tests/__snapshots__/jobs-build.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/jobs-build.dev.yaml
@@ -184,7 +184,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -981,5 +981,24 @@ spec:
     - hosts:
         - pgweb-test-jobs-build-feature-branch-1.dev.fabrique.social.gouv.fr
       secretName: wildcard-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-jobs-build-feature-branch-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
