--- a/packages/workflow/tests/__snapshots__/long-branch-host.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/long-branch-host.dev.yaml
@@ -123,7 +123,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -161,5 +161,24 @@ spec:
         - >-
           app-api-test-long-branch-host-feature-branch-1.dev.fabrique.social.gouv.fr
       secretName: wildcard-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-long-branch-host-feature-branch-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
