--- a/packages/workflow/tests/__snapshots__/metabase.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/metabase.prod.yaml
@@ -359,6 +359,25 @@ spec:
         - metabase-app2-test-metabase.fabrique.social.gouv.fr
       secretName: metabase-app2-crt
 ---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-metabase
+  annotations:
+    kapp.k14s.io/disable-original: ''
+---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
