--- a/packages/workflow/tests/__snapshots__/redis.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/redis.dev.yaml
@@ -135,5 +135,24 @@ spec:
             requests:
               cpu: 300m
               memory: 128Mi
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-redis-feature-branch-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
