--- a/packages/workflow/tests/__snapshots__/sample-1.preprod.yaml
+++ b/packages/workflow/tests/__snapshots__/sample-1.preprod.yaml
@@ -198,7 +198,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -269,7 +269,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -573,6 +573,25 @@ spec:
     - hosts:
         - pgweb-test-sample-1-preprod.dev.fabrique.social.gouv.fr
       secretName: wildcard-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-sample-1-preprod
+  annotations:
+    kapp.k14s.io/disable-original: ''
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
