--- a/packages/workflow/tests/__snapshots__/sample-1.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/sample-1.prod.yaml
@@ -196,7 +196,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -266,7 +266,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -581,6 +581,25 @@ spec:
     - hosts:
         - pgweb-test-sample-1.fabrique.social.gouv.fr
       secretName: pgweb-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-sample-1
+  annotations:
+    kapp.k14s.io/disable-original: ''
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
