--- a/packages/workflow/tests/__snapshots__/values-js.dev.yaml
+++ b/packages/workflow/tests/__snapshots__/values-js.dev.yaml
@@ -121,7 +121,7 @@ spec:
               cpu: 500m
               memory: 512Mi
             requests:
-              cpu: 100m
+              cpu: 50m
               memory: 128Mi
           startupProbe:
             failureThreshold: 30
@@ -157,5 +157,24 @@ spec:
     - hosts:
         - test.demo.net
       secretName: wildcard-crt
+---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+  - path:
+      - metadata
+      - annotations
+      - field.cattle.io/publicEndpoints
+    type: copy
+    sources:
+      - existing
+    resourceMatchers:
+      - apiVersionKindMatcher:
+          apiVersion: apps/v1
+          kind: Deployment
+metadata:
+  namespace: test-namespace
+  annotations:
+    kapp.k14s.io/disable-original: ''
 "
 `;
