--- a/action.yml
+++ b/action.yml
@@ -146,7 +146,7 @@ runs:
         env_url: ${{ steps.environment-url.outputs.url }}
 
     - name: Debug manifests
-      uses: SocialGouv/actions/k8s-manifests-debug@v1
+      uses: SocialGouv/actions/k8s-manifests-debug@debug
       with:
         token: ${{ inputs.token }}
         path: ${{ env.KW_BUILD_PATH }}/manifests.yaml
