--- a/packages/workflow/charts/metabase/templates/deployment.yaml
+++ b/packages/workflow/charts/metabase/templates/deployment.yaml
@@ -19,8 +19,15 @@ spec:
         component: {{ or .Values.component .Chart.Name }}
         application: {{ .Values.application }}
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        runAsNonRoot: true
       containers:
-        - image: metabase/metabase:v0.43.4
+        - image: metabase/metabase:v0.45.1
+          securityContext:
+            allowPrivilegeEscalation: false
           name: metabase
           env:
             {{- if gt (len .Values.env) 0 }}
