--- a/packages/workflow/tests/__snapshots__/ingress-annotations.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/ingress-annotations.prod.yaml
@@ -114,8 +114,15 @@ spec:
       labels:
         component: metabase
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        runAsNonRoot: true
       containers:
-        - image: metabase/metabase:v0.43.4
+        - image: metabase/metabase:v0.45.1
+          securityContext:
+            allowPrivilegeEscalation: false
           name: metabase
           envFrom:
             - configMapRef:
