--- a/packages/workflow/tests/__snapshots__/metabase.prod.yaml
+++ b/packages/workflow/tests/__snapshots__/metabase.prod.yaml
@@ -178,8 +178,15 @@ spec:
       labels:
         component: metabase-app1
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        runAsNonRoot: true
       containers:
-        - image: metabase/metabase:v0.43.4
+        - image: metabase/metabase:v0.45.1
+          securityContext:
+            allowPrivilegeEscalation: false
           name: metabase
           envFrom:
             - configMapRef:
@@ -250,8 +257,15 @@ spec:
       labels:
         component: metabase-app2
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        runAsNonRoot: true
       containers:
-        - image: metabase/metabase:v0.43.4
+        - image: metabase/metabase:v0.45.1
+          securityContext:
+            allowPrivilegeEscalation: false
           name: metabase
           envFrom:
             - configMapRef:
